KGLL-232/artifacts/kongair/flights-service-with-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: kongair-flights
  labels:
    app: kongair-flights
spec:
  selector:
    app: kongair-flights
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 5052
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kongair-flights
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kongair-flights
  template:
    metadata:
      labels:
        app: kongair-flights
    spec:
      containers:
      - name: kongair-flights
        image: kongedu/kongair-flights:1.0
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
        
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: kong
  annotations:
    konghq.com/gatewayclass-unmanaged: "true"
spec:
  controllerName: konghq.com/kic-gateway-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kong
spec:
  gatewayClassName: kong
  listeners:
  - name: proxy
    port: 80
    protocol: HTTP
  - name: proxy-ssl
    port: 443
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: kongair-flights
spec:
 parentRefs:
 - name: kong
 rules:
 - matches:
   - path:
       type: PathPrefix
       value: /flights
   backendRefs:
   - name: kongair-flights
     kind: Service
     port: 5052
